@@ -1,6 +1,6 @@
 TARGET = libnxdb.dll
 TYPE = dll
-SOURCES = dbcp.cpp drivers.cpp main.cpp session.cpp util.cpp
+SOURCES = cache.cpp dbcp.cpp drivers.cpp main.cpp session.cpp util.cpp
 
 CPPFLAGS = /DLIBNXDB_EXPORTS
 LIBS = libnetxms.lib ws2_32.lib
