@@ -139,6 +139,7 @@
 #define AF_TRAP_SOURCES_IN_ALL_ZONES           _ULL(0x0000000800000000)
 #define AF_SYSLOG_DISCOVERY                    _ULL(0x0000001000000000)
 #define AF_ENABLE_LOCAL_CONSOLE                _ULL(0x0000002000000000)
+#define AF_CACHE_DB_ON_STARTUP                 _ULL(0x0000004000000000)
 #define AF_SERVER_INITIALIZED                  _ULL(0x4000000000000000)
 #define AF_SHUTDOWN                            _ULL(0x8000000000000000)
 
